force-app/main/default/objects/SP_Portal_Theme__c/SP_Portal_Theme__c.object-meta.xml
<CustomObject>
    <description>Portal theme configuration. Stores extracted website theme as JSON and branding settings.</description>
    <label>Support Portal Theme</label>
    <nameField>
        <label>Theme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support Portal Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>