force-app/main/default/objects/SP_Portal_Theme__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Company name displayed in the portal header and branding.</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>