force-app/main/default/objects/SP_Portal_Theme__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <description>URL to the portal logo image (extracted from website or uploaded).</description>
    <label>Logo URL</label>
    <type>Url</type>
</CustomField>