force-app/main/default/objects/SP_Portal_Theme__c/fields/Portal_Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>Portal_Config_JSON__c</fullName>
    <label>Portal Config JSON</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>JSON configuration for portal field visibility and product options. Controls which fields appear on case forms.</description>
</CustomField>