force-app/main/default/objects/SP_Portal_Theme__c/fields/Source_Website_URL__c.field-meta.xml
<CustomField>
    <fullName>Source_Website_URL__c</fullName>
    <description>The website URL the theme was extracted from.</description>
    <label>Source Website URL</label>
    <type>Url</type>
</CustomField>