force-app/main/default/objects/SP_Portal_Theme__c/fields/Theme_JSON__c.field-meta.xml
<CustomField>
    <fullName>Theme_JSON__c</fullName>
    <description>JSON blob containing the full extracted theme: colors, fonts, logo URL, dark/light mode. Applied as CSS variable overrides at runtime.</description>
    <label>Theme JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>